--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
 	<link rel="stylesheet" href="{% static 'w3.css' %}">
 </head>
 <body><h1>Web Scraper</h1>
-	<div class="w3-center" ><img class="w3-round w3-hover-grayscale" src="{% static 'ai.png' %}" width="50%"></div>
+	<div class="w3-center" ><img class="w3-round w3-hover-grayscale" src="{% static 'web-scraping.jpg' %}" width="50%"></div>
 	
 	<form method="post" action="{% url 'scrape' %}">
 		{% csrf_token %}
