--- a/templates/result.html
+++ b/templates/result.html
@@ -88,7 +88,7 @@
 			{% csrf_token %}
 			<h3>Download Option</h3>
 		  
-			<select class="w3-select" id="download_type" name="download_type">
+			<select class="w3-select w3-round" id="download_type" name="download_type">
 			  <option value="" disabled selected>Choose your option</option>
 			  <option value="pdf">PDF</option>
 			  <option value="csv">CSV</option>
